# general_cpp

./: .gitignore  CMakeLists.txt  README.md  files.h
cpp/: common.cpp  directories.cpp  exceptions.cpp  maths.cpp  signatures.cpp  str.cpp  time.cpp  ui.cpp
cpp/Lattices/: hexagonal.cpp  honeycomb.cpp  lattices.cpp  square.cpp
cpp/LinearAlgebra/: matlab_tmp.m  minres.py  ode.cpp  pfaffian.cpp  preconditioners.cpp  solvers.cpp
cpp/LinearAlgebra/Solvers/: solvers_arma.cpp  solvers_arnoldi.cpp  solvers_cg.cpp  solvers_direct.cpp  solvers_minres.cpp  solvers_minresqlp.cpp  solvers_pseudo.cpp
cpp/Random/: montecarlo.cpp
src/: binary.h  common.h  flog.h  lattices.h  lin_alg.h  plotter.h  progress.h  statistical.h  str.h  xoshiro_pp.h
src/Include/: containers.h  directories.h  exceptions.h  files.h  math.h  maths.h  ml.h  montecarlo.hpp  random.h  signatures.h  statistical.h  str.h  time.h
src/Include/linalg/: diagonalizers.h  generalized_matrix.h
src/Lattices/: hexagonal.h  honeycomb.h  square.h
src/LinearAlgebra/: alg.h  lin_alg.h
src/UserInterface/: ui.h
